cabal-version: 3.0
name:          lbt-plutus-haskell
version:       0.1.0.0
synopsis:
  Integration Test Suite for `lbf-plutus` and Haskell `lbr-plutus`

author:        Drazen Popovic
maintainer:    bladyjoker@gmail.com

flag dev
  description: Enable non-strict compilation for development
  manual:      True

common common-language
  ghc-options:
    -Wall -Wcompat -fprint-explicit-foralls -fprint-explicit-kinds
    -fwarn-missing-import-lists -Weverything -Wno-unsafe
    -Wno-missing-safe-haskell-mode -Wno-implicit-prelude
    -Wno-missing-kind-signatures -Wno-all-missed-specializations

  if !flag(dev)
    ghc-options: -Werror

  default-extensions:
    NoStarIsType
    BangPatterns
    BinaryLiterals
    ConstrainedClassMethods
    ConstraintKinds
    DataKinds
    DeriveAnyClass
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    DoAndIfThenElse
    DuplicateRecordFields
    EmptyCase
    EmptyDataDecls
    EmptyDataDeriving
    ExistentialQuantification
    ExplicitForAll
    ExplicitNamespaces
    FlexibleContexts
    FlexibleInstances
    ForeignFunctionInterface
    GADTSyntax
    GeneralizedNewtypeDeriving
    HexFloatLiterals
    ImportQualifiedPost
    InstanceSigs
    KindSignatures
    LambdaCase
    MonomorphismRestriction
    MultiParamTypeClasses
    NamedFieldPuns
    NamedWildCards
    NumericUnderscores
    OverloadedLabels
    OverloadedStrings
    PartialTypeSignatures
    PatternGuards
    PolyKinds
    PostfixOperators
    RankNTypes
    RecordWildCards
    RelaxedPolyRec
    ScopedTypeVariables
    StandaloneDeriving
    StandaloneKindSignatures
    TemplateHaskell
    TraditionalRecordSyntax
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    TypeSynonymInstances
    ViewPatterns

  default-language:   Haskell2010

library
  import:          common-language
  build-depends:
    , base               >=4.16
    , bytestring         >=0.11
    , containers         >=0.6
    , filepath           >=1.4
    , lbf-golden-api
    , lbr-plutus
    , lbr-prelude
    , plutus-ledger-api  >=1.1
    , plutus-tx          >=1.1
    , tasty              >=1.4
    , tasty-golden
    , tasty-hunit
    , text               >=1.2

  hs-source-dirs:  src
  exposed-modules:
    Test.LambdaBuffers.Plutus.Golden
    Test.LambdaBuffers.Plutus.Golden.Json
    Test.LambdaBuffers.Plutus.Golden.PlutusData

executable lbt-plutus-golden
  import:         common-language
  build-depends:
    , base                  >=4.16
    , lbr-plutus            >=0.1
    , lbt-plutus-haskell
    , optparse-applicative  >=0.17

  hs-source-dirs: app
  main-is:        Main.hs
  other-modules:
    Test.LambdaBuffers.Plutus.Cli.GenerateJson
    Test.LambdaBuffers.Plutus.Cli.GeneratePlutusData

test-suite tests
  import:         common-language
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  main-is:        Test.hs
  build-depends:
    , base                       >=4.16
    , hedgehog                   >=1.2
    , lbf-golden-api             >=0.1
    , lbr-plutus
    , lbr-prelude
    , lbt-plutus-golden-data-hs
    , lbt-plutus-haskell
    , plutus-tx
    , tasty                      >=1.4
    , tasty-hedgehog             >=1.4

  other-modules:
    Test.LambdaBuffers.Runtime.Plutus.Generators.Correct
    Test.LambdaBuffers.Runtime.Plutus.PlutusData
