cabal-version: 3.0
name:          lbt-plutus-plutarch
version:       0.1.0.0
synopsis:
  Integration Test Suite for `lbf-plutus` and Plutarch `lbr-plutus-plutarch`

author:        Drazen Popovic
maintainer:    bladyjoker@gmail.com

flag dev
  description: Enable non-strict compilation for development
  manual:      True

common common-language
  ghc-options:
    -Wall -Wcompat -fprint-explicit-foralls -fprint-explicit-kinds
    -fwarn-missing-import-lists -Weverything -Wno-unsafe
    -Wno-missing-safe-haskell-mode -Wno-implicit-prelude
    -Wno-missing-kind-signatures -Wno-all-missed-specializations

  if !flag(dev)
    ghc-options: -Werror

  default-extensions:
    BangPatterns
    BinaryLiterals
    ConstrainedClassMethods
    ConstraintKinds
    DataKinds
    DeriveAnyClass
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    DoAndIfThenElse
    DuplicateRecordFields
    EmptyCase
    EmptyDataDecls
    EmptyDataDeriving
    ExistentialQuantification
    ExplicitForAll
    ExplicitNamespaces
    FlexibleContexts
    FlexibleInstances
    ForeignFunctionInterface
    GADTSyntax
    GeneralizedNewtypeDeriving
    HexFloatLiterals
    ImportQualifiedPost
    InstanceSigs
    KindSignatures
    LambdaCase
    MonomorphismRestriction
    MultiParamTypeClasses
    NamedFieldPuns
    NamedWildCards
    NoStarIsType
    NumericUnderscores
    OverloadedLabels
    OverloadedStrings
    PartialTypeSignatures
    PatternGuards
    PolyKinds
    PostfixOperators
    RankNTypes
    RecordWildCards
    RelaxedPolyRec
    ScopedTypeVariables
    StandaloneDeriving
    StandaloneKindSignatures
    TemplateHaskell
    TraditionalRecordSyntax
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    TypeSynonymInstances
    ViewPatterns

  default-language:   Haskell2010

library
  import:          common-language
  build-depends:
    , base
    , bytestring
    , filepath
    , lbr-plutarch
    , lbr-plutus
    , lbr-prelude
    , lbt-plutus-golden-data
    , plutus-tx

  hs-source-dirs:  src
  exposed-modules: Test.LambdaBuffers.Plutarch.Golden

test-suite tests
  import:         common-language
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  main-is:        Test.hs
  build-depends:
    , base
    , lbf-plutus
    , lbf-plutus-golden-api
    , lbf-plutus-golden-api-plutarch
    , lbf-plutus-plutarch
    , lbf-prelude
    , lbf-prelude-plutarch
    , lbr-plutarch
    , lbr-plutus
    , lbt-plutus-plutarch
    , plutarch
    , plutus-tx
    , tasty
    , tasty-expected-failure
    , tasty-hunit

  other-modules:  Test.LambdaBuffers.Runtime.Plutarch.PlutusData
