[package]
name = "lbt-plutus"
version = "0.1.0"
edition = "2021"

[dependencies]
plutus-ledger-api = { version = "0.2.1", features = ["lbf"] }
lbf-plutus-golden-api-rust = { path = ".extras/lbf-plutus-golden-api-rust-0.1.0" }
lbf-plutus-golden-api-days-rust = { path = ".extras/lbf-plutus-golden-api-days-rust-0.1.0" }
lbf-prelude = { path = ".extras/lbf-prelude-0.1.0" }
lbr-prelude = { version = "0.1.1" }
serde_json = "1.0.108"
num-bigint = "0.4.4"
