[package]
name = "lbt-plutus"
version = "0.1.0"
edition = "2021"

[lib]

[dependencies]
plutus-ledger-api = { version = "3.0.0", features = ["lbf"] }
lbf-plutus-golden-api = { path = ".extras/lbf-plutus-golden-api-0.1.0" }
lbf-prelude = { path = ".extras/lbf-prelude-0.1.0" }
lbr-prelude = { version = "0.1.3" }
serde_json = "1.0.108"
num-bigint = "0.4.4"
